# zeroshot-preprocessing

./: README.md  pyproject.toml
notebooks/: overview.ipynb
src/zspreprocessing/: __init__.py  __main__.py  inspector.py  pipeline.py  reducer.py  scaler.py
src/zspreprocessing/utils/: logging.py
tests/: test_preprocessing.py
