[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zspreprocessing"
version = "0.1.0"
description = "Zero-shot scikit-learn preprocessing pipeline selection"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name="Your Name", email="you@ersilia.io"}
]
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "scikit-learn>=1.0",
  "loguru>=0.6",
  "rich>=12.0",
  "onnx>=1.14",
  "skl2onnx>=1.14",
  "onnxruntime>=1.19,<1.20",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

